--- a/Homeworks/Assignment-14/index.css
+++ b/Homeworks/Assignment-14/index.css
@@ -24,8 +24,10 @@ div{
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
+    margin-top: 40px;
+    padding: 20px;
+    border: 3px solid skyblue;
+    box-shadow: 0 0.5rem 1rem skyblue;
 }
-
 
 
