--- a/Homeworks/Assignment-17/index.css
+++ b/Homeworks/Assignment-17/index.css
@@ -2,4 +2,60 @@
     margin: 0;
     padding: 0;
 }
+.container{
+    display: flex;
+    justify-content: space-around;
+}
+.card{
+    background-color: rgb(196, 165, 165);
+    width: 20vw;
+    margin-top: 10vh;
+    border-radius: 20px;
+    box-shadow: 0 0 15px 7px rgb(225, 222, 222);
+    padding: 10px;
+    
+}
+.card img{
+    width:100%;
+    border-radius: 20px;
+}
+.card h1{
+    margin-top: 10px;
+    text-align: center;
+}
+.card h4{
+    text-align: center;
+    margin-top: 5px;
+}
+.summary{
+    margin-top: 20px;
+    padding: 10px;
+}
+.summary p {
+    text-align: justify;
+    margin-top: 10px;
+    font-size: large;
+}
+.p{
+    margin-top: 10px;
+    font-size: large;
+}
+.icon{
+    height: 2px;
+}
+button{
+    padding: 10px;
+    width:7vw;
+    font-size: large;
+    text-align: center;
+    border-radius: 20px;
+    background: none;
+    border: none;
+    border: 1px solid red;
+    margin-top: 20px;
+    margin-bottom: 20px;
+   
+}
+.summary b{
 
+}
