--- a/Homeworks/Assignment-18/index.css
+++ b/Homeworks/Assignment-18/index.css
@@ -1,34 +1,49 @@
-.calculator-body{
-    height: 55vh;
-    width: 22vw;
-    background-color: #3D3D5C;
-    margin: 20px auto;
-    border-radius: 10px;
-    padding: 20px;
-    padding-top: 40px;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins',sans-serif;
+    box-sizing: border-box;
 }
-.screen{
-    background-color: #a1af77;
-    text-align: right;
-    width: 20vw;
-    display: block;
-    margin: 0 auto;
-    font-size: 30px;
-    padding: 12px 10px;
-    margin-bottom: 20px;
-}
-.btn{
-    width: 50px;
-    padding: 2px 0;
-    text-align: center;
-    font-size: 20px;
-    margin: 5px;
-    
-}
-.button-container{
+.container{
+    width: 100%;
+    height: 100vh;
+    background: #e3f9ff ;
     display: flex;
-    flex-direction: column;
-    height: 300px;
-    flex-wrap: wrap;
-    background-color: antiquewhite;
+    align-items: center;
+    justify-content: center;
+}
+.calculator{
+    background: #3a4452;
+    padding: 20px;
+    border-radius: 10px;
+
+}
+.calculator form input{
+    border: 0;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),5px 5px 15px rgba(0, 0, 0, 0.2);
+    background: transparent;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
+}
+form .display{
+         display: flex;
+         justify-content: flex-end;
+         margin: 20px 0;
+}
+form .display input{
+    text-align: right;
+    flex: 1;
+    box-sizing: 45px;
+    box-shadow: none;
+    font-size: 40px;
+}
+form input.equals{
+    
+    width: 145px;
 }
