--- a/Homeworks/Assignment-16/index.css
+++ b/Homeworks/Assignment-16/index.css
@@ -7,6 +7,9 @@
     background-color: aqua;
     padding: 40px;
     position: sticky;
+    top: 0px;
+    width: 100%;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
 }
 ul{
     display: flex;
@@ -25,12 +28,21 @@ a{
     width: 70px;
     background-color: black;
     position: absolute;
-    left: 824px;
+    left: 812px;
     margin-top: 26px;
 
 }
+.icon-ing{
+    position: fixed;
+    right: 80px;
+    bottom: 80px;
+    height: 100px;
+    mix-blend-mode: multiply;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 10px;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
+}
 .box{
     height: 120vh;
-    width: 50vw;
-    background-color: red;
 }
