--- a/Homeworks/Assignment-16/index.css
+++ b/Homeworks/Assignment-16/index.css
@@ -9,7 +9,7 @@
     position: sticky;
     top: 0px;
     width: 100%;
-   color: white;
+    color: white;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
 }
 ul{
@@ -32,7 +32,7 @@ a{
     width: 70px;
     background-color: blue;
     position: absolute;
-    left: 812px;
+    left: 851px;
     margin-top: 26px;
 
 }
@@ -64,6 +64,8 @@ a{
 }
 .card1 img{
     width: 100%;
+    height: 60%;
+    padding: 20px;
     border-radius: 20px;
     
  
@@ -73,6 +75,23 @@ a{
     font-weight: 600;
     margin: 60px;
     font-size: xx-large;
-
-
+}
+.btn{
+    height: 50px;
+    width: 140px;
+    padding: 20px;
+    padding-bottom: 40px;
+    text-align: center;
+    display: block;
+    margin: auto ;
+    margin-top: 30px;
+    border: none;
+    border-radius: 20px;
+    background-color: burlywood;
+    color: white;
+    font-size: larger;
+}
+.brand{
+    text-align: center;
+    margin-top: 10px;
 }
