--- a/Homeworks/Assignment-16/index.css
+++ b/Homeworks/Assignment-16/index.css
@@ -56,7 +56,7 @@ a{
 
 }
 .card1{
-    background-color: brown;
+    background-color: #985E49;
     height: 50vh;
     width: 20vw;
     border-radius: 20px;
@@ -87,7 +87,7 @@ a{
     margin-top: 30px;
     border: none;
     border-radius: 20px;
-    background-color: burlywood;
+    background-color: #4B371C;
     color: white;
     font-size: larger;
 }
