--- a/Homeworks/Assignment-21/receipt.css
+++ b/Homeworks/Assignment-21/receipt.css
@@ -33,3 +33,44 @@ body{
     font-size: 30px;
     margin: 40px 0;
 }
+.receipt-detail-key{
+    color: gray;
+    width: 30%;
+}
+.receipt-detail-value{
+    font-weight: bold;
+    border-bottom: 1px dashed gray;
+    width: 30%;
+}
+.receipt-detail{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin: 20px 0;
+}
+.accountant-signature{
+    text-align: right;
+    margin-top: 100px;
+
+}
+.stamp{
+    width: 150px;
+    mix-blend-mode: multiply;
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+    transform: rotate(-30deg);
+
+
+}
+.receipt-body{
+    position: relative;
+    border-bottom: 1px dashed gray;
+    padding: 10px ;
+}
+.receipt-footer{
+    text-align: center;
+    padding: 20px 0;
+    font-size: 20px;
+    background-color: #ffca39;
+}
