--- a/Homeworks/Assignment-21/receipt.css
+++ b/Homeworks/Assignment-21/receipt.css
@@ -82,23 +82,7 @@ body{
 /* Small Devices */
 @media screen and (max-width: 600px) 
 {
-    .brand-logo{
-        width: 80px;
-        display: block;
-        margin: 0 auto;
-    }
-    .brand-title{
-        text-align: center;
-    }
-    .receipt-container{
-        width: 100%;
-        border: 1px solid gray; 
-        margin: 0 auto;
-        background-color: #fff;
-        padding: 5px;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0 , 0, 0, 0.2);
-    }
+    
     .brand-address{
         text-align: center;
     }
@@ -118,7 +102,23 @@ body{
         color: gray;
         width: 30%;
     }
-    .receipt-detail-value{
+    .receipt-detail-value{.brand-logo{
+        width: 80px;
+        display: block;
+        margin: 0 auto;
+    }
+    .brand-title{
+        text-align: center;
+    }
+    .receipt-container{
+        width: 100%;
+        border: 1px solid gray; 
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 5px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0 , 0, 0, 0.2);
+    }
         font-weight: bold;
         border-bottom: 1px dashed gray;
         width: 30%;
@@ -162,16 +162,240 @@ body{
 @media screen and (min-width: 601px) and (max-width: 768px) 
 {
     
+        .brand-logo
+        {
+            width: 80px;
+            display: block;
+            margin: 0 auto;
+        }
+        .brand-title{
+            text-align: center;
+        }
+        .receipt-container{
+            width: 100%;
+            border: 1px solid gray; 
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0 , 0, 0, 0.2);
+        }
+        .brand-address{
+            text-align: center;
+        }
+        .brand-mobile{
+            text-align: center;
+        
+        }
+        .receipt-header{
+            border-bottom: 1px dashed gray;
+        }
+        .receipt-title{
+            text-align: center;
+            font-size: 20px;
+            margin: 40px 0;
+        }
+        .receipt-detail-key{
+            color: gray;
+            width: 30%;
+        }
+        .receipt-detail-value{
+            font-weight: bold;
+            border-bottom: 1px dashed gray;
+            width: 30%;
+        }
+        .receipt-detail{
+            display: flex;
+            justify-content: center;
+            font-size: 15px;
+            margin: 20px 0;
+        }
+        .accountant-signature{
+            margin-right: 25px;
+            text-align: right;
+            margin-top: 100px;
+        
+        }
+        .stamp{
+            width: 130px;
+            mix-blend-mode: multiply;
+            position: absolute;
+            right: 25px;
+            bottom: 30px;
+            transform: rotate(-30deg);
+        
+        
+        }
+        .receipt-body{
+            position: relative;
+            border-bottom: 1px dashed gray;
+            padding: 10px ;
+        }
+        .receipt-footer{
+            text-align: center;
+            padding: 15px 0;
+            font-size: 15px;
+            background-color: #ffca39;
+        }
+     
+    
 }
 
 /* Tablets Devices */
 @media screen and (min-width: 769px) and (max-width:992px) 
 {
     
+        .brand-logo{
+            width: 80px;
+            display: block;
+            margin: 0 auto;
+        }
+        .brand-title{
+            text-align: center;
+        }
+        .receipt-container{
+            width: 100%;
+            border: 1px solid gray; 
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0 , 0, 0, 0.2);
+        }
+        .brand-address{
+            text-align: center;
+        }
+        .brand-mobile{
+            text-align: center;
+        
+        }
+        .receipt-header{
+            border-bottom: 1px dashed gray;
+        }
+        .receipt-title{
+            text-align: center;
+            font-size: 20px;
+            margin: 40px 0;
+        }
+        .receipt-detail-key{
+            color: gray;
+            width: 30%;
+        }
+        .receipt-detail-value{
+            font-weight: bold;
+            border-bottom: 1px dashed gray;
+            width: 30%;
+        }
+        .receipt-detail{
+            display: flex;
+            justify-content: center;
+            font-size: 15px;
+            margin: 20px 0;
+        }
+        .accountant-signature{
+            margin-right: 25px;
+            text-align: right;
+            margin-top: 100px;
+        
+        }
+        .stamp{
+            width: 130px;
+            mix-blend-mode: multiply;
+            position: absolute;
+            right: 25px;
+            bottom: 30px;
+            transform: rotate(-30deg);
+        
+        
+        }
+        .receipt-body{
+            position: relative;
+            border-bottom: 1px dashed gray;
+            padding: 10px ;
+        }
+        .receipt-footer{
+            text-align: center;
+            padding: 15px 0;
+            font-size: 15px;
+            background-color: #ffca39;
+        }
+     
 }
 
 /* Large Devices */
 @media screen and (min-width:993px) and (max-width:1200px) 
 {
+    .brand-logo{
+        width: 100px;
+        display: block;
+        margin: 0 auto;
+    }
+    .brand-title{
+        text-align: center;
+    }
+    .receipt-container{
+        width: 80%;
+        border: 1px solid gray; 
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0 , 0, 0, 0.2);
+    }
+    .brand-address{
+        text-align: right;
+    }
+    .brand-mobile{
+        text-align: right;
     
+    }
+    .receipt-header{
+        border-bottom: 1px dashed gray;
+    }
+    .receipt-title{
+        text-align: center;
+        font-size: 30px;
+        margin: 40px 0;
+    }
+    .receipt-detail-key{
+        color: gray;
+        width: 30%;
+    }
+    .receipt-detail-value{
+        font-weight: bold;
+        border-bottom: 1px dashed gray;
+        width: 30%;
+    }
+    .receipt-detail{
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        margin: 20px 0;
+    }
+    .accountant-signature{
+        text-align: right;
+        margin-top: 100px;
+    
+    }
+    .stamp{
+        width: 150px;
+        mix-blend-mode: multiply;
+        position: absolute;
+        right: 0;
+        bottom: 20px;
+        transform: rotate(-30deg);
+    
+    
+    }
+    .receipt-body{
+        position: relative;
+        border-bottom: 1px dashed gray;
+        padding: 10px ;
+    }
+    .receipt-footer{
+        text-align: center;
+        padding: 20px 0;
+        font-size: 20px;
+        background-color: #ffca39;
+    }
 }
