--- a/Homeworks/Assignment-19/index.css
+++ b/Homeworks/Assignment-19/index.css
@@ -1,23 +1,62 @@
-*{
-    margin: 0;
-    padding: 0;
-   
+body{
+    background-color:#f5f7fb ;
 }
-.container{
+.card{
+    width: 400px;
+    background-color: #FFF;
+    box-shadow: 0 0 10px 5px rgba(0,0,0,0.1);
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 20px;
+}
+.card-img{
+    height: 60px;
+    box-shadow: 0 0 5px 1px rgba(0,0,0,0.1);
+    padding: 5px;
+    border-radius: 5px;
 
+}
+.card-heading{
+    font-size: 23px;
+    margin-left: 5px;
+}
+.card-header-section{
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+.card-description{
+       font-size:18px;
+       padding: 10px 20px;
+       margin: 0;
+}
+.cards-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
 
+/* Small Devices */
+@media screen and (max-width: 600px) 
+{
+    
 }
-.cards{
-    background-color: aliceblue;
-    height: 400px;
-    width: 20vw;
-    padding: 20px;
+
+/* Normal Devices */
+@media screen and (min-width: 601px) and (max-width: 768px) 
+{
+    
 }
-h1{
-    text-align: center;
-    font-size: 60px;
-    margin: 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+/* Tablets Devices */
+@media screen and (min-width: 769px) and (max-width:992px) 
+{
+    
+}
+
+/* Large Devices */
+@media screen and (min-width:993px) and (max-width:1200px) 
+{
+    
 }
