--- a/Homeworks/Assignment-19/index.css
+++ b/Homeworks/Assignment-19/index.css
@@ -37,26 +37,43 @@ body{
     flex-wrap: wrap;
 }
 
-/* Small Devices */
-@media screen and (max-width: 600px) 
-{
-    
-}
-
 /* Normal Devices */
 @media screen and (min-width: 601px) and (max-width: 768px) 
 {
-    
+    .card{
+        width: 100%;
+        margin: 20px;
+    }
 }
 
 /* Tablets Devices */
 @media screen and (min-width: 769px) and (max-width:992px) 
 {
-    
+    .cards-container{
+        justify-content: start;
+    }
+    .card{
+        width: 300px;
+        margin-left: 100px;
+        margin-top: 50px;
+    }
+    .card-img{
+        height: 40px;
+    }
+    .card-heading{
+        font-size: 20px;
+    }
 }
 
 /* Large Devices */
-@media screen and (min-width:993px) and (max-width:1200px) 
+@media screen and (min-width:993px) and (max-width:1250px) 
 {
-    
+    .cards-container{
+        justify-content: start;
+    }
+    .card{
+        width: 350px;
+        margin-left: 120px;
+        margin-top: 50px;
+    }
 }
