small divices media added

--- a/Homeworks/Assignment-19/index.css
+++ b/Homeworks/Assignment-19/index.css
@@ -37,6 +37,15 @@ body{
     flex-wrap: wrap;
 }
 
+/* Small Devices */
+@media screen and (max-width: 600px) 
+{
+    .card-description{
+       display: none;
+    }
+
+}
+
 /* Normal Devices */
 @media screen and (min-width: 601px) and (max-width: 768px) 
 {
