--- a/Homeworks/Assignment-20/index.css
+++ b/Homeworks/Assignment-20/index.css
@@ -34,7 +34,47 @@
 a{
     text-decoration: none;
 }
+
+.media-nav{
+  
+    
+}
+.media-container{
+
+    position: absolute;
+    bottom: 0px;
+    display: none;
+    width: 100%;
+    background-color: aqua;
+
+}
+.media-items{
+
+
+}
+
 @media screen and (max-width: 600px) {
     
+    .media-nav{
+        
+        
+    }
+    .media-container{
+    
+
+        position: absolute;
+        bottom: 0px;
+        display: block;
+        width: 100%;
+        background-color: aqua;
+    
+    }
+    .media-items{
+    
+    
+    }
+    .nav-container{
+        display: none;
+    }
     
 }
