--- a/Homeworks/Assignment-20/index.css
+++ b/Homeworks/Assignment-20/index.css
@@ -79,10 +79,13 @@ a{
         padding: 20px;
     }
     img{
-        height: 35px;
+        height: 30px;
     }
     li{
         list-style: none;
+        border: 2px solid black;
+        border-radius: 50%;
+        padding: 5px;
     }
     .nav-container{
         display: none;
